--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -r dotenv/config ./src/index.js"
+    "dev": "nodemon -r dotenv/config ./src/index.js",
+    "start": "node -r dotenv/config ./src/index.js"
   },
   "author": "yuvraj yadav",
   "license": "ISC",
@@ -21,7 +22,8 @@
     "mongoose": "^8.3.2",
     "mongoose-aggregate-paginate-v2": "^1.0.7",
     "multer": "^1.4.5-lts.1",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
